# hade

./: LICENSE  README.md  error.out  final-project_2.xlsx  hade.cabal  hade.dia  hade.dia.autosave  hade.komodoproject  hade.lkshs  hade.lkshw  retest.sh  stack.yaml  stack.yaml~  test.json  test.sh
.stack-work/: stack.sqlite3
.stack-work/ghci/11bf6c26/: cabal_macros.h
.stack-work/ghci/16e50618/: cabal_macros.h
.stack-work/ghci/1b36c8f1/: cabal_macros.h
.stack-work/ghci/21ab7b77/: cabal_macros.h
.stack-work/ghci/2a98925e/: cabal_macros.h
.stack-work/ghci/303d4cca/: cabal_macros.h
.stack-work/ghci/3ae896da/: cabal_macros.h
.stack-work/ghci/3bda36ab/: cabal_macros.h
.stack-work/ghci/401c0c7c/: cabal_macros.h
.stack-work/ghci/4559094b/: cabal_macros.h
.stack-work/ghci/49927906/: cabal_macros.h
.stack-work/ghci/4a73b45e/: cabal_macros.h
.stack-work/ghci/5168c0b7/: cabal_macros.h
.stack-work/ghci/682bf220/: cabal_macros.h
.stack-work/ghci/6c24c729/: cabal_macros.h
.stack-work/ghci/6ce8bc64/: cabal_macros.h
.stack-work/ghci/7b99fbb1/: cabal_macros.h
.stack-work/ghci/8299ca77/: cabal_macros.h
.stack-work/ghci/840c8845/: cabal_macros.h
.stack-work/ghci/8ce75c15/: cabal_macros.h
.stack-work/ghci/93fb3754/: cabal_macros.h
.stack-work/ghci/9ea6a743/: cabal_macros.h
.stack-work/ghci/9f51154b/: cabal_macros.h
.stack-work/ghci/ae7e7ef4/: cabal_macros.h
.stack-work/ghci/b9d216e9/: cabal_macros.h
.stack-work/ghci/bc093a40/: cabal_macros.h
.stack-work/ghci/bde0c808/: cabal_macros.h
.stack-work/ghci/c2bb9eba/: cabal_macros.h
.stack-work/ghci/c3a8edd6/: cabal_macros.h
.stack-work/ghci/c585fbab/: cabal_macros.h
.stack-work/ghci/ca27a525/: cabal_macros.h
.stack-work/ghci/cdb9aefa/: cabal_macros.h
.stack-work/ghci/ce1d305e/: cabal_macros.h
.stack-work/ghci/ce95a405/: cabal_macros.h
.stack-work/ghci/d4c1f323/: cabal_macros.h
.stack-work/ghci/de14ad1d/: cabal_macros.h
.stack-work/ghci/df5ffadf/: cabal_macros.h
.stack-work/ghci/e31a11ff/: cabal_macros.h
.stack-work/ghci/e38dd45a/: cabal_macros.h
.stack-work/ghci/e9355d81/: cabal_macros.h
.stack-work/ghci/e9833b87/: cabal_macros.h
.stack-work/ghci/eeecf7e3/: cabal_macros.h
.stack-work/ghci/f0790cc1/: cabal_macros.h
.stack-work/ghci/f0a1e65c/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/62018528f53440b71d0b33af1a4da17027d372bd28c65de64695e46ad95435c0/9.0.2/lib/x86_64-linux-ghc-9.0.2/csv2json-0.1.0.0-D2E6GR3oa5pJOg9pFHUk1e/: CSV2JSON.dyn_hi  CSV2JSON.hi
.stack-work/install/x86_64-linux-tinfo6/62018528f53440b71d0b33af1a4da17027d372bd28c65de64695e46ad95435c0/9.0.2/pkgdb/: csv-conduit-0.7.3.0-BlvPTcl73WHD6sUrVsDqXM.conf  csv2json-0.1.0.0-D2E6GR3oa5pJOg9pFHUk1e.conf  distributed-static-0.3.9-EIGaFP2HOKn5ZVl99MnG8x.conf  network-transport-tcp-0.8.0-9qzb7Ub37GZ6Pk3RcjNc35.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6/6365ad3e017c4a235acddf8d013bde827d7f28707a24ae1512ff2dcbb7940be8/9.0.2/pkgdb/: distributed-static-0.3.9-EIGaFP2HOKn5ZVl99MnG8x.conf  network-transport-tcp-0.8.0-9qzb7Ub37GZ6Pk3RcjNc35.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6/6a72cf9ddea6678249c996089d0a50310eacf714c6d5722d18f5038210166f61/9.0.2/doc/hade-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux-tinfo6/6a72cf9ddea6678249c996089d0a50310eacf714c6d5722d18f5038210166f61/9.0.2/pkgdb/: csv-conduit-0.7.3.0-BlvPTcl73WHD6sUrVsDqXM.conf  csv2json-0.1.0.0-D2E6GR3oa5pJOg9pFHUk1e.conf  distributed-process-0.7.4-A9Q7HLRqgnGGv82ZmkuQiA.conf  distributed-process-simplelocalnet-0.2.4-HYqDhvPVW6OELMg3iZ9aPQ.conf  distributed-static-0.3.9-EIGaFP2HOKn5ZVl99MnG8x.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6/9eec60245766401cf208efb4ce168103a5559563cfbb6a1732b877ea06ba8413/8.10.7/pkgdb/: csv-conduit-0.7.3.0-IGBQ20CRP4jAYLkaXKEkds.conf  csv2json-0.1.0.0-1Whk4MS0swa5msTLh2N72n.conf  distributed-process-0.7.4-FubRgWeZMfmEyIlT2IqiEW.conf  distributed-process-simplelocalnet-0.2.4-FQqxCtor7cv1rYL5OCxDLz.conf  distributed-static-0.3.9-Te2Z4eV7gDJe2T0MkVZ5k.conf  network-transport-tcp-0.8.0-DZA7fVz2nLEHymfvs7AF89.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6/afc381142174325ca26de9ecdc5a37f3d7c56682e62fbaf147807f023bc23e4d/9.0.2/pkgdb/: csv-conduit-0.7.3.0-BlvPTcl73WHD6sUrVsDqXM.conf  csv2json-0.1.0.0-D2E6GR3oa5pJOg9pFHUk1e.conf  distributed-process-0.7.4-A9Q7HLRqgnGGv82ZmkuQiA.conf  distributed-process-simplelocalnet-0.2.4-HYqDhvPVW6OELMg3iZ9aPQ.conf  distributed-static-0.3.9-EIGaFP2HOKn5ZVl99MnG8x.conf  network-transport-tcp-0.8.0-9qzb7Ub37GZ6Pk3RcjNc35.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6/ff0839b14755c3ba6409973991f91d0e893948e69c6bbb93823ae3e8e04cce5e/8.10.7/pkgdb/: csv-conduit-0.7.3.0-IGBQ20CRP4jAYLkaXKEkds.conf  csv2json-0.1.0.0-1Whk4MS0swa5msTLh2N72n.conf  distributed-process-0.7.4-FubRgWeZMfmEyIlT2IqiEW.conf  distributed-static-0.3.9-Te2Z4eV7gDJe2T0MkVZ5k.conf  package.cache
app/hade-client/: Main.hs  Main.hs~
app/hade-server/: Main.hs  Main.hs~
config/: architecture.json  config.json  config.json.330.bak  config.json.bak  config.json~  config.xml
hade-web/: .gitignore  ChangeLog.md  README.md  hade-web.cabal.bak  package.yaml  stack.yaml  stack.yaml.bak
maps/src01_csv/: in_test_csv1.csv  in_test_csv1.csv.bak
maps/src02_csv/: in_test_csv2.csv  in_test_csv3.csv
maps/src03_excel/: in_test_excel1.xlsx
maps/trg01_csv/: map_si_trg01_csv1.json  map_si_trg01_csv1.json.bak  map_si_trg01_csv1.xml  out_test_csv1.csv
maps/trg01_web/: map_si_trg01_cvs1.json
src/: Actor.hs  Remote.hs  Row.hs  Server.hs  Step.hs  Struct.hs  Util.hs
src/Actor/: Master.hs  Master.hs~  MasterActor.hs  MasterActor.hs~  Master_bak.hs
src/Row/: RowData.hs  RowMeta.hs
src/Server/: Service.hs  Service.hs~
src/Step/: (map.map) U.fromString.hs  ReadCsv.hs  ReadCsv.hs.bak  ReadExcel.hs  ReadExcel.hs.bak  ReadExcel.hs~  ReturnVal.hs
src/Struct/: Architecture.hs  Architecture.hs~  Struct.hs  Struct.hs.bak  Struct.hs~
src/Util/: Util.hs
template/: template.cabal
(+3 files in other folders)
